# elm-bench

./: Cargo.toml  README.md
elm-benchmark-cli/: README.md  elm.json
elm-benchmark-cli/src/: AsciiTable.elm  Console.elm
elm-benchmark-cli/src/Benchmark/Runner/: Node.elm
src/: elm_json.rs  elmi.rs  help.rs  init.rs  main.rs  run.rs  utils.rs
templates/: BenchmarkRunner.elm  Benchmarks.elm  node_benchmark_runner.js
tests/: Runner.elm.js  processed-isolate-file.txt
