[package]
name = "elm-test-rs"
version = "0.1.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>"]
edition = "2018"
description = "Simple and fast rust alternative to node-test-runner for elm-test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.3.1"
glob = "0.3.0"
varj = "0.1.0"
# miniserde = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

pathdiff = "0.1"
include_dir = "0.5.0"
rand = { version = "0.7.3", default-features = false, features = ["std"] }
num_cpus = "1"

[dev-dependencies]
