[package]
name = "elm-bench"
version = "0.1.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>", "Folkert de Vries <folkert@folkertdev.nl>"]
edition = "2018"
description = "Run elm benchmarks from the command line"

[dependencies]
pico-args = "0.3.1"
glob = "0.3.0"
varj = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty = "0.10.0"


pathdiff = "0.1"
include_dir = "0.5.0"
rand = { version = "0.7.3", default-features = false, features = ["std"] }
num_cpus = "1"

[dev-dependencies]
